--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,8 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "no-console": "off",
-    "no-unused-vars": "off",
-    "react/prop-types": "off"
-  }
+  "extends": "next/core-web-vitals"
 }
